# Daler_TP_2

.github/workflows/: my_action.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.h
task2/C/: main.cpp  main.h  main_test.cpp  main_test.h  test.cpp
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/: .coverage  main.py
task4/tests/test_01/: test_add.py  test_get_month_days.py  test_leap.py
task4/tests/test_02/: test_size_tree.py  test_tree.py
task4/tests/test_03/: test_weather.py
task5/cmake-with-flask/: Dockerfile
